--- a/SWP_Paint/bin/gui/MainView.fxml
+++ b/SWP_Paint/bin/gui/MainView.fxml
@@ -1,56 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import javafx.collections.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="498.0" prefWidth="496.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<AnchorPane prefHeight="484.0" prefWidth="496.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gui.MainController">
   <!-- TODO Add Nodes -->
   <children>
-    <SplitPane id="SplitPane" layoutX="26.0" layoutY="203.0">
+    <Button fx:id="bClean" layoutX="381.0" layoutY="160.0" mnemonicParsing="false" text="Löschen" />
+    <Button fx:id="bGroup" layoutX="305.0" layoutY="160.0" mnemonicParsing="false" text="Gruppe" />
+    <Button id="bStart" layoutX="248.0" layoutY="160.0" mnemonicParsing="false" text="Start" />
+    <ComboBox fx:id="cbColor" layoutX="81.0" layoutY="27.0">
       <items>
-        <Pane prefHeight="266.0" prefWidth="445.0" />
+        <FXCollections fx:factory="observableArrayList">
+          <String fx:value="Item 1" />
+          <String fx:value="Item 2" />
+          <String fx:value="Item 3" />
+        </FXCollections>
+      </items>
+    </ComboBox>
+    <ComboBox fx:id="cbShape" layoutX="81.0" layoutY="74.0">
+      <items>
+        <FXCollections fx:factory="observableArrayList">
+          <String fx:value="Item 1" />
+          <String fx:value="Item 2" />
+          <String fx:value="Item 3" />
+        </FXCollections>
+      </items>
+    </ComboBox>
+    <ComboBox fx:id="cbPen" layoutX="81.0" layoutY="130.0">
+      <items>
+        <FXCollections fx:factory="observableArrayList">
+          <String fx:value="Item 1" />
+          <String fx:value="Item 2" />
+          <String fx:value="Item 3" />
+        </FXCollections>
+      </items>
+    </ComboBox>
+    <Label layoutX="23.0" layoutY="27.0" text="Farbe" />
+    <Label layoutX="27.0" layoutY="75.0" text="Form" />
+    <Label layoutX="27.0" layoutY="130.0" text="Stift" />
+    <SplitPane id="SplitPane" layoutX="26.0" layoutY="195.0">
+      <items>
+        <Pane fx:id="pCanvas" prefHeight="266.0" prefWidth="445.0" />
       </items>
     </SplitPane>
-    <Button layoutX="331.0" layoutY="25.0" mnemonicParsing="false" text="Alles Löschen" />
-    <Button layoutX="331.0" layoutY="53.0" mnemonicParsing="false" text="Gruppe" />
-    <SplitPane id="SplitPane" layoutX="22.0" layoutY="10.0">
-      <items>
-        <Pane prefHeight="156.0" prefWidth="125.0">
-          <children>
-            <RadioButton layoutX="27.0" layoutY="114.0" mnemonicParsing="false" text="Quadrat" />
-            <RadioButton layoutX="27.0" layoutY="89.0" mnemonicParsing="false" text="Dreieck" />
-            <RadioButton layoutX="27.0" layoutY="65.0" mnemonicParsing="false" text="Ellipse" />
-            <RadioButton layoutX="26.0" layoutY="39.0" mnemonicParsing="false" text="Kreis" />
-            <RadioButton layoutX="27.0" layoutY="14.0" mnemonicParsing="false" text="Rechteck" />
-          </children>
-        </Pane>
-      </items>
-    </SplitPane>
-    <SplitPane id="SplitPane" layoutX="163.0" layoutY="10.0">
-      <items>
-        <Pane prefHeight="81.0" prefWidth="140.0">
-          <children>
-            <RadioButton layoutX="28.0" layoutY="41.0" mnemonicParsing="false" text="Stift dünn" />
-            <RadioButton layoutX="28.0" layoutY="14.0" mnemonicParsing="false" text="Stift dick" />
-          </children>
-        </Pane>
-      </items>
-    </SplitPane>
-    <SplitPane id="SplitPane" layoutX="164.0" layoutY="103.0">
-      <items>
-        <Pane prefHeight="86.0" prefWidth="303.0">
-          <children>
-            <RadioButton layoutX="18.0" layoutY="14.0" mnemonicParsing="false" text="Rot" />
-            <RadioButton layoutX="108.0" layoutY="14.0" mnemonicParsing="false" text="Gelb" />
-            <RadioButton layoutX="233.0" layoutY="14.0" mnemonicParsing="false" text="Blau" />
-            <RadioButton layoutX="18.0" layoutY="43.0" mnemonicParsing="false" text="Grün" />
-            <RadioButton layoutX="108.0" layoutY="43.0" mnemonicParsing="false" text="Schwarz" />
-            <RadioButton layoutX="229.0" layoutY="43.0" mnemonicParsing="false" text="Weiß" />
-          </children>
-        </Pane>
-      </items>
-    </SplitPane>
+    <TextField id="tfLaenge" fx:id="tfLength" layoutX="271.0" layoutY="108.0" prefWidth="45.0" />
+    <TextField id="tfBreite" fx:id="tfWidth" layoutX="271.0" layoutY="74.0" prefWidth="45.0" />
+    <Label layoutX="180.0" layoutY="72.0" text="Breite/Radius" />
+    <Label layoutX="180.0" layoutY="108.0" text="Länge" />
   </children>
 </AnchorPane>
