--- a/SWP_Paint/bin/gui/MainView.fxml
+++ b/SWP_Paint/bin/gui/MainView.fxml
@@ -6,50 +6,65 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="484.0" prefWidth="496.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gui.MainController">
+<AnchorPane prefHeight="484.0" prefWidth="627.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gui.MainController">
   <!-- TODO Add Nodes -->
   <children>
-    <Button fx:id="bClean" layoutX="381.0" layoutY="160.0" mnemonicParsing="false" text="Löschen" />
-    <Button fx:id="bGroup" layoutX="305.0" layoutY="160.0" mnemonicParsing="false" text="Gruppe" />
-    <Button id="bStart" layoutX="248.0" layoutY="160.0" mnemonicParsing="false" text="Start" />
-    <ComboBox fx:id="cbColor" layoutX="81.0" layoutY="27.0">
+    <SplitPane dividerPositions="0.7632" focusTraversable="true" prefHeight="484.0" prefWidth="558.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <items>
-        <FXCollections fx:factory="observableArrayList">
-          <String fx:value="Item 1" />
-          <String fx:value="Item 2" />
-          <String fx:value="Item 3" />
-        </FXCollections>
-      </items>
-    </ComboBox>
-    <ComboBox fx:id="cbShape" layoutX="81.0" layoutY="74.0">
-      <items>
-        <FXCollections fx:factory="observableArrayList">
-          <String fx:value="Item 1" />
-          <String fx:value="Item 2" />
-          <String fx:value="Item 3" />
-        </FXCollections>
-      </items>
-    </ComboBox>
-    <ComboBox fx:id="cbPen" layoutX="81.0" layoutY="130.0">
-      <items>
-        <FXCollections fx:factory="observableArrayList">
-          <String fx:value="Item 1" />
-          <String fx:value="Item 2" />
-          <String fx:value="Item 3" />
-        </FXCollections>
-      </items>
-    </ComboBox>
-    <Label layoutX="23.0" layoutY="27.0" text="Farbe" />
-    <Label layoutX="27.0" layoutY="75.0" text="Form" />
-    <Label layoutX="27.0" layoutY="130.0" text="Stift" />
-    <SplitPane id="SplitPane" layoutX="26.0" layoutY="195.0">
-      <items>
-        <Pane fx:id="pCanvas" prefHeight="266.0" prefWidth="445.0" />
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+          <children>
+            <Pane fx:id="pCanvas" prefHeight="482.0" prefWidth="474.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+          </children>
+        </AnchorPane>
+        <AnchorPane maxWidth="145.0" minHeight="0.0" minWidth="145.0" prefHeight="482.0" prefWidth="224.0">
+          <children>
+            <Button id="bClean" fx:id="bClear" layoutX="12.0" layoutY="351.0" mnemonicParsing="false" text="Löschen" />
+            <Button fx:id="bGroup" layoutX="12.0" layoutY="320.0" mnemonicParsing="false" text="Gruppieren" />
+            <Button id="bStart" fx:id="bShape" layoutX="12.0" layoutY="243.0" mnemonicParsing="false" onAction="#start" text="Auswahl bestätigen" />
+            <ComboBox fx:id="cbColor" layoutX="64.0" layoutY="90.0" prefWidth="71.0">
+              <items>
+                <FXCollections fx:factory="observableArrayList">
+                  <String fx:value="Item 1" />
+                  <String fx:value="Item 2" />
+                  <String fx:value="Item 3" />
+                </FXCollections>
+              </items>
+            </ComboBox>
+            <ComboBox fx:id="cbShape" layoutX="64.0" layoutY="59.0" prefHeight="-1.0" prefWidth="71.0">
+              <items>
+                <FXCollections fx:factory="observableArrayList">
+                  <String fx:value="Item 1" />
+                  <String fx:value="Item 2" />
+                  <String fx:value="Item 3" />
+                </FXCollections>
+              </items>
+            </ComboBox>
+            <Label layoutX="15.0" layoutY="92.0" text="Farbe" />
+            <Label layoutX="14.0" layoutY="62.0" text="Form" />
+            <Label layoutX="15.0" layoutY="125.0" text="Dicke" />
+            <TextField id="tfLaenge" fx:id="tfLength" layoutX="85.0" layoutY="211.0" prefWidth="50.0" />
+            <TextField id="tfBreite" fx:id="tfWidth" layoutX="85.0" layoutY="182.0" prefWidth="50.0" />
+            <Label layoutX="15.0" layoutY="185.0" text="Breite" />
+            <Label layoutX="15.0" layoutY="214.0" text="Länge" />
+            <Button fx:id="bUndo" layoutX="15.0" layoutY="14.0" mnemonicParsing="false" text="Undo" />
+            <Button fx:id="bRedo" layoutX="87.0" layoutY="14.0" mnemonicParsing="false" text="Redo" />
+            <Separator layoutX="0.0" layoutY="46.0" prefWidth="144.0" />
+            <Separator layoutX="0.0" layoutY="276.0" prefWidth="144.0" />
+            <TextField id="tfBreite" fx:id="tfRadius" layoutX="85.0" layoutY="153.0" prefWidth="50.0" />
+            <Label layoutX="15.0" layoutY="156.0" text="Radius" />
+            <Button fx:id="bEdit" layoutX="12.0" layoutY="289.0" mnemonicParsing="false" text="Bearbeiten" />
+            <ComboBox id="cbColor" fx:id="cbWeight" layoutX="85.0" layoutY="123.0" minWidth="48.0" prefHeight="21.0" prefWidth="50.0">
+              <items>
+                <FXCollections fx:factory="observableArrayList">
+                  <String fx:value="Item 1" />
+                  <String fx:value="Item 2" />
+                  <String fx:value="Item 3" />
+                </FXCollections>
+              </items>
+            </ComboBox>
+          </children>
+        </AnchorPane>
       </items>
     </SplitPane>
-    <TextField id="tfLaenge" fx:id="tfLength" layoutX="271.0" layoutY="108.0" prefWidth="45.0" />
-    <TextField id="tfBreite" fx:id="tfWidth" layoutX="271.0" layoutY="74.0" prefWidth="45.0" />
-    <Label layoutX="180.0" layoutY="72.0" text="Breite/Radius" />
-    <Label layoutX="180.0" layoutY="108.0" text="Länge" />
   </children>
 </AnchorPane>
