soo nochmal weils vorher ned ganz gefunzt hat

--- a/SWP_Paint/bin/gui/MainView.fxml
+++ b/SWP_Paint/bin/gui/MainView.fxml
@@ -30,8 +30,8 @@
               </items>
             </ComboBox>
             <Pane fx:id="pColorPicker" layoutX="68.0" layoutY="71.0" prefHeight="21.0" prefWidth="87.0" />
-            <Button id="bClean" fx:id="bClear" layoutX="16.0" layoutY="302.0" mnemonicParsing="false" prefWidth="139.0" text="Clear Artboard" />
-            <Button fx:id="bGroup" layoutX="16.0" layoutY="270.0" mnemonicParsing="false" prefWidth="138.00009999999747" text="Group" />
+            <Button id="bClean" fx:id="bClear" layoutX="16.0" layoutY="302.0" mnemonicParsing="false" onAction="#doClear" prefWidth="139.0" text="Clear Artboard" />
+            <Button fx:id="bGroup" layoutX="16.0" layoutY="270.0" mnemonicParsing="false" onAction="#doGroup" prefWidth="138.00009999999747" text="Group" />
             <Button id="bStart" fx:id="bShape" layoutX="101.0" layoutY="224.0" mnemonicParsing="false" onAction="#doDraw" prefWidth="54.0" text="Draw" />
             <Label layoutX="16.0" layoutY="76.0" text="Color" />
             <Label layoutX="16.0" layoutY="45.0" text="Tools" />
@@ -40,7 +40,7 @@
             <Label layoutX="16.0" layoutY="195.0" text="Length" />
             <Separator layoutX="1.0" layoutY="257.0" prefWidth="160.0" />
             <Label layoutX="16.0" layoutY="137.0" text="Radius" />
-            <Button fx:id="bEdit" layoutX="16.0" layoutY="224.0" mnemonicParsing="false" prefWidth="54.0" text="Edit" />
+            <Button fx:id="bEdit" layoutX="16.0" layoutY="224.0" mnemonicParsing="false" onAction="#doEdit" prefWidth="54.0" text="Edit" />
             <Slider fx:id="sRadius" layoutX="65.0" layoutY="138.0" prefWidth="65.0" />
             <Label fx:id="lblRadius" layoutX="137.0" layoutY="136.0" prefWidth="21.0" text="0" />
             <Slider fx:id="sWidth" layoutX="65.0" layoutY="167.0" prefWidth="65.0" />
