--- a/SWP_Paint/src/gui/MainView.fxml
+++ b/SWP_Paint/src/gui/MainView.fxml
@@ -13,7 +13,7 @@
       <items>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
           <children>
-            <Pane fx:id="pCanvas" prefHeight="482.0" prefWidth="474.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Pane id="pCanvas" fx:id="pArtBoard" prefHeight="482.0" prefWidth="474.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
           </children>
         </AnchorPane>
         <AnchorPane maxWidth="175.0" minHeight="0.0" minWidth="175.0" prefHeight="482.0" prefWidth="-1.0">
